# reason-jvm-ffi

./: .gitignore  README.md  dune-project  package.json  reason-java-ffi.install
docs/: Low_level_api.md  STRUCTURES.md
esy.lock/: index.json
lib/: Emit_Helper.re  Java_Class.re  Java_Class_Emit.re  Java_Env.re  Java_Method.re  Java_Package.re  Java_Package_Emit.re  Java_Type.re  Java_Type_Emit.re  dune
lib/bindgen/: Class.re  Class.rei  Field.re  Field.rei  Method.re  Method.rei  Reason_jvm_ffi_bindgen.re  Utils.re  dune
lib/emit/: Basic_structures.re  Basic_types.re  Class.re  Class.rei  Class_functor.re  Emit_Helper.re  Field.re  Java_Class.re  Java_Class_Emit.re  Java_Env.re  Java_Field.re  Java_Field.rei  Java_Field_Emit.re  Java_Method.re  Java_Method.rei  Java_Method_Emit.re  Java_Package.re  Java_Package_Emit.re  Java_Type.re  Java_Type_Emit.re  Java_class.re  Java_class_safe.re  Java_class_unsafe.re  Make.re  Make.rei  Make_functor.re  Method.re  Type.re  Type.rei  Unsafe.re  dune
lib/ir/: Reason_jvm_ffi_ir.re  dune
lib/parse/: Parse.re  Parse.rei  dune
lib/runtime/: Jvm_ffi_runtime.re  Jvm_ffi_runtime.rei  dune
test/: Helpers.re  Setup.re  TestEmitClass.re  TestEmitField.re  TestEmitMethod.re  TestParseClass.re  TestRunner.re  dune
test/java_class/: .gitattributes
