(library
 (name reason_jvm_ffi_test)
 (modules
  (:standard \ TestRunner))
 (library_flags
  (-linkall -g))
 (libraries rely.lib ocaml-migrate-parsetree reason reason_jvm_ffi_ir
   reason_jvm_ffi_bindgen reason_jvm_ffi_parse)
 (preprocess
  (pps ppx_tools_versioned.metaquot_410)))

(executable
 (name TestRunner)
 (modules TestRunner)
 (libraries reason_jvm_ffi_test)
 (preprocess
  (pps ppx_tools_versioned.metaquot_410)))

(copy_files java_class/*.class)

(rule
 (alias runtest)
 (deps
  (:test ./TestRunner.exe)
  Object2D.class
  Square.class
  Potato.class)
 (action
  (run %{test})))
